--- a/src/popup.css
+++ b/src/popup.css
@@ -12,6 +12,9 @@
   --shadow: 0 16px 30px rgba(15, 23, 42, 0.08);
   --danger: #ef4444;
   --soft: #e5e7eb;
+  --sun-color: #f4a000;
+  --moon-color: #ffffff;
+  --logout-color: #0f172a;
 }
 
 :root[data-theme="dark"] {
@@ -26,6 +29,7 @@
   --shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
   --danger: #f87171;
   --soft: rgba(148, 163, 184, 0.2);
+  --logout-color: #ffffff;
 }
 
 * {
@@ -99,6 +103,10 @@ body {
   display: block;
 }
 
+.icon-button.theme:hover {
+  background: rgba(99, 102, 241, 0.12);
+}
+
 .icon-button.logout {
   border: 1px solid transparent;
 }
@@ -112,7 +120,31 @@ body {
   width: 20px;
   height: 20px;
   display: block;
-  background: url("icons/LogoutIcon.png") center / contain no-repeat;
+  background-color: var(--logout-color);
+  -webkit-mask: no-repeat center / contain;
+  mask: no-repeat center / contain;
+  -webkit-mask-image: url("icons/LogoutIcon.png");
+  mask-image: url("icons/LogoutIcon.png");
+}
+
+.theme-icon {
+  width: 20px;
+  height: 20px;
+  display: block;
+  -webkit-mask: no-repeat center / contain;
+  mask: no-repeat center / contain;
+}
+
+.theme-icon.sun {
+  background-color: var(--sun-color);
+  -webkit-mask-image: url("icons/SunIcon.png");
+  mask-image: url("icons/SunIcon.png");
+}
+
+.theme-icon.moon {
+  background-color: var(--moon-color);
+  -webkit-mask-image: url("icons/MoonIcon.png");
+  mask-image: url("icons/MoonIcon.png");
 }
 
 .section {
