feat: shift login content down

--- a/src/popup.css
+++ b/src/popup.css
@@ -180,7 +180,7 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
-  padding: 28px 16px;
+  padding: 40px 16px 20px;
 }
 
 .marketing.no-card {
